--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <header>
-      <a href="" target="_blank">Webstudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul style="list-style-type: none">
-          <li style="display: inline">Studio</li>
-          <li style="display: inline">Portfolio</li>
-          <li style="display: inline">Contacts</li>
+          <li style="display: inline"><a href=""></a>Studio</li>
+          <li style="display: inline"><a href=""></a>Portfolio</li>
+          <li style="display: inline"><a href=""></a>Contacts</li>
         </ul>
         <address>
           <ul style="list-style-type: none">
@@ -36,6 +36,7 @@
         <button type="button">Order Service</button>
       </div>
       <div>
+        <h2></h2>
         <section>
           <h3>Strategy</h3>
           <p>
@@ -80,7 +81,7 @@
           </li>
           <li>
             <img
-              src="./img/img (1).png"
+              src="./img/img(1).png"
               alt="photo Tom Ford"
               width="264"
               height="260"
@@ -90,7 +91,7 @@
           </li>
           <li>
             <img
-              src="./img/img (2).png"
+              src="./img/img(2).png"
               alt="photo Camila Garcia"
               width="264"
               height="260"
@@ -100,7 +101,7 @@
           </li>
           <li>
             <img
-              src="./img/img (3).png"
+              src="./img/img(3).png"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
@@ -112,7 +113,7 @@
       </div>
     </main>
     <footer>
-      <a href="" target="_blank">Webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
