--- a/index.html
+++ b/index.html
@@ -10,68 +10,68 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul style="list-style-type: none">
-          <li style="display: inline"><a href=""></a>Studio</li>
-          <li style="display: inline"><a href=""></a>Portfolio</li>
-          <li style="display: inline"><a href=""></a>Contacts</li>
+          <li style="display: inline"><a href="">Studio</a></li>
+          <li style="display: inline"><a href="">Portfolio</a></li>
+          <li style="display: inline"><a href="">Contacts</a></li>
         </ul>
-        <address>
-          <ul style="list-style-type: none">
-            <li style="display: inline">
-              <a href="mailto:info@devstudio.com" target="_blank"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li style="display: inline">
-              <a href="tel:+110001111111" target="_blank"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul style="list-style-type: none">
+          <li style="display: inline">
+            <a href="mailto:info@devstudio.com" target="_blank"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li style="display: inline">
+            <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-      <div>
+      <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
-      </div>
-      <div>
-        <h2></h2>
-        <section>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </section>
-        <section>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </section>
-        <section>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </section>
-        <section>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </section>
-      </div>
-      <div>
+      </section>
+      <section>
+        <h2>Our advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="./img/img.png"
+              src="./img/img.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
@@ -81,7 +81,7 @@
           </li>
           <li>
             <img
-              src="./img/img(1).png"
+              src="./img/img(1).jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
@@ -91,7 +91,7 @@
           </li>
           <li>
             <img
-              src="./img/img(2).png"
+              src="./img/img(2).jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="./img/img(3).png"
+              src="./img/img(3).jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
@@ -110,7 +110,7 @@
             <p>UI Designer</p>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
