--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul>
           <li>
             <img
-              src="./img/img.jpg"
+              src="./images/img.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
@@ -81,7 +81,7 @@
           </li>
           <li>
             <img
-              src="./img/img(1).jpg"
+              src="./images/img(1).jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
@@ -91,7 +91,7 @@
           </li>
           <li>
             <img
-              src="./img/img(2).jpg"
+              src="./images/img(2).jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
@@ -101,7 +101,7 @@
           </li>
           <li>
             <img
-              src="./img/img(3).jpg"
+              src="./images/img(3).jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
