--- a/index.html
+++ b/index.html
@@ -4,34 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.com/libraries/modern-normalize"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="container">
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul style="list-style-type: none">
-          <li style="display: inline"><a href="">Studio</a></li>
-          <li style="display: inline"><a href="">Portfolio</a></li>
-          <li style="display: inline"><a href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul>
+          <li><a href="" class="nav-studio">Studio</a></li>
+          <li><a href="" class="nav-portfolio">Portfolio</a></li>
+          <li><a href="" class="nav-contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul style="list-style-type: none">
-          <li style="display: inline">
-            <a href="mailto:info@devstudio.com" target="_blank"
+        <ul>
+          <li>
+            <a class="link" href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
-          <li style="display: inline">
-            <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+          <li>
+            <a class="tel" href="tel:+110001111111" target="_blank"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="title">
+        <h1 class="title-text">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <section>
         <h2>Our advantages</h2>
@@ -108,6 +123,72 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/bankingapp.jpg"
+              alt="banking app"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashlesspayment.jpg"
+              alt="cashless payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditationapp.jpg"
+              alt="meditation app"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/taxiservice.jpg"
+              alt="taxi service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screenillustrations.jpg"
+              alt="screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/onlinecourses.jpg"
+              alt="online courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
