--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
     <header>
       <nav>
         <a class="logo" href="./index.html"
-          ><span class="logo-web">Web</span>Studio</a
+          >Web<span class="logo-studio">Studio</span></a
         >
         <ul>
-          <li><a href="" class="nav-studio">Studio</a></li>
-          <li><a href="" class="nav-portfolio">Portfolio</a></li>
-          <li><a href="" class="nav-contacts">Contacts</a></li>
+          <li><a href="./index.html" class="nav">Studio</a></li>
+          <li><a href="" class="nav">Portfolio</a></li>
+          <li><a href="" class="nav">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
-            <a class="link" href="mailto:info@devstudio.com" target="_blank"
+            <a
+              class="address-info"
+              href="mailto:info@devstudio.com"
+              target="_blank"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="tel" href="tel:+110001111111" target="_blank"
+            <a class="address-info" href="tel:+110001111111" target="_blank"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -49,85 +52,84 @@
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="caption">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="caption">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="caption">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="caption">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="section-our-team">
+        <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="section-card">
             <img
               src="./images/img.jpg"
               alt="photo Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="caption">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="section-card">
             <img
               src="./images/img(1).jpg"
               alt="photo Tom Ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="caption">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-card">
             <img
               src="./images/img(2).jpg"
               alt="photo Camila Garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="caption">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="section-card">
             <img
               src="./images/img(3).jpg"
               alt="photo Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="caption">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -136,8 +138,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="caption">Banking App</h3>
+            <p class="text">App</p>
           </li>
           <li>
             <img
@@ -146,8 +148,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="caption">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -156,8 +158,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="caption">Meditation App</h3>
+            <p class="text">App</p>
           </li>
 
           <li>
@@ -167,8 +169,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="caption">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -177,8 +179,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="caption">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -187,15 +189,17 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="caption">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"
+        >Web<span class="logo-studio-footer">Studio</span></a
+      >
+      <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
