--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <button class="button" type="button">Order Service</button>
       </section>
       <section>
+        <h2 class="section-title">Our Advantages</h2>
         <ul>
           <li>
             <h3 class="caption">Strategy</h3>
