--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </head>
   <body>
     <header class="head-nav">
-      <div class="conteiner-nav" class="conteiner">
-        <nav class="conteiner-nav-nav">
+      <div class="container-nav container">
+        <nav class="container-nav-nav">
           <a class="logo" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
           >
-          <ul class="conteiner-nav-menu">
+          <ul class="container-nav-menu">
             <li><a href="./index.html" class="nav">Studio</a></li>
             <li><a href="" class="nav">Portfolio</a></li>
             <li><a href="" class="nav">Contacts</a></li>
@@ -57,14 +57,14 @@
     </header>
     <main>
       <section class="title">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="title-text">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
       </section>
       <section class="our-advent">
-        <div class="conteiner-advent">
-          <h2 class="section-title">Our Portfolio</h2>
+        <div class="container">
+          <h2 class="visually-hidden">Our Advent</h2>
           <ul class="list-advent">
             <li class="list-advent-strategy">
               <h3 class="caption">Strategy</h3>
@@ -87,7 +87,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="list-advent-strategy">
               <h3 class="caption">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -99,7 +99,7 @@
       </section>
       <section class="section-our-team">
         <div class="container">
-          <h2 class="section-title">Our Team</h2>
+          <h2 class="section-title-team">Our Team</h2>
           <ul class="list-team">
             <li class="section-card">
               <img
@@ -153,7 +153,7 @@
         </div>
       </section>
       <section class="portfolio">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="section-title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="list-portfolio-item">
@@ -168,7 +168,7 @@
                 <p class="text">App</p>
               </div>
             </li>
-            <li>
+            <li class="list-portfolio-item">
               <img
                 src="./images/cashlesspayment.jpg"
                 alt="cashless payment"
@@ -180,7 +180,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="list-portfolio-item">
               <img
                 src="./images/meditationapp.jpg"
                 alt="meditation app"
@@ -193,7 +193,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="list-portfolio-item">
               <img
                 src="./images/taxiservice.jpg"
                 alt="taxi service"
@@ -205,7 +205,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="list-portfolio-item">
               <img
                 src="./images/screenillustrations.jpg"
                 alt="screen illustrations"
@@ -216,7 +216,7 @@
               <h3 class="caption-product">Screen Illustrations</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="list-portfolio-item">
               <img
                 src="./images/onlinecourses.jpg"
                 alt="online courses"
@@ -233,7 +233,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container">
         <a class="logo-footer" href="./index.html"
           >Web<span class="logo-studio-footer">Studio</span></a
         >
