--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@
                 width="360"
                 height="300"
               />
-              <div class="name-category"></div>
-              <h3 class="caption-product">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="name-category">
+                <h3 class="caption-product">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="list-portfolio-item">
               <img
