--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <h2 class="visually-hidden">Our Advent</h2>
           <ul class="list-advent">
             <li class="list-advent-strategy">
+              <svg class="icon" width="64" height="64">
+                <use href="#icon-antenna"></use>
+              </svg>
               <h3 class="caption">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +77,9 @@
               </p>
             </li>
             <li class="list-advent-strategy">
+              <svg class="icon" width="64" height="64">
+                <use href="#icon-clock"></use>
+              </svg>
               <h3 class="caption">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +87,9 @@
               </p>
             </li>
             <li class="list-advent-strategy">
+              <svg class="icon" width="64" height="64">
+                <use href="#icon-astronaut"></use>
+              </svg>
               <h3 class="caption">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +97,9 @@
               </p>
             </li>
             <li class="list-advent-strategy">
+              <svg class="icon" width="64" height="64">
+                <use href="#icon-diagram"></use>
+              </svg>
               <h3 class="caption">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +123,9 @@
               <div class="name-position">
                 <h3 class="caption-name">Mark Guerrero</h3>
                 <p class="text-position">Product Designer</p>
+                <svg class="icon-social" width="40" height="40">
+                  <use href="#icon-Ellipse1"></use>
+                </svg>
               </div>
             </li>
             <li class="section-card">
@@ -123,6 +138,9 @@
               <div class="name-position">
                 <h3 class="caption-name">Tom Ford</h3>
                 <p class="text-position">Frontend Developer</p>
+                <svg class="icon-social" width="40" height="40">
+                  <use href="#icon-Ellipse-11"></use>
+                </svg>
               </div>
             </li>
             <li class="section-card">
@@ -135,6 +153,9 @@
               <div class="name-position">
                 <h3 class="caption-name">Camila Garcia</h3>
                 <p class="text-position">Marketing</p>
+                <svg class="icon-social" width="40" height="40">
+                  <use href="#icon-Ellipse-21"></use>
+                </svg>
               </div>
             </li>
             <li class="section-card">
@@ -147,6 +168,9 @@
               <div class="name-position">
                 <h3 class="caption-name">Daniel Wilson</h3>
                 <p class="text-position">UI Designer</p>
+                <svg class="icon-social" width="40" height="40">
+                  <use href="#icon-Ellipse-31"></use>
+                </svg>
               </div>
             </li>
           </ul>
@@ -157,36 +181,60 @@
           <h2 class="section-title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="list-portfolio-item">
-              <img
-                src="./images/bankingapp.jpg"
-                alt="banking app"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/bankingapp.jpg"
+                  alt="banking app"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="list-portfolio-item">
-              <img
-                src="./images/cashlesspayment.jpg"
-                alt="cashless payment"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/cashlesspayment.jpg"
+                  alt="cashless payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="list-portfolio-item">
-              <img
-                src="./images/meditationapp.jpg"
-                alt="meditation app"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/meditationapp.jpg"
+                  alt="meditation app"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Meditation App</h3>
                 <p class="text">App</p>
@@ -194,36 +242,60 @@
             </li>
 
             <li class="list-portfolio-item">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="taxi service"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="taxi service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="list-portfolio-item">
-              <img
-                src="./images/screenillustrations.jpg"
-                alt="screen illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/screenillustrations.jpg"
+                  alt="screen illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="list-portfolio-item">
-              <img
-                src="./images/onlinecourses.jpg"
-                alt="online courses"
-                width="360"
-                height="300"
-              />
+              <div class="list-portfolio-item-img">
+                <img
+                  src="./images/onlinecourses.jpg"
+                  alt="online courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
+
               <div class="name-category">
                 <h3 class="caption-product">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -242,6 +314,31 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="footer-social-text">
+          <h4>Social media</h4>
+          <ul class="footer-social">
+            <li>
+              <svg class="icon-social" width="40" height="40">
+                <use href="#icon-Ellipse1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon-social" width="40" height="40">
+                <use href="#icon-Ellipse-11"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon-social" width="40" height="40">
+                <use href="#icon-Ellipse-21"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon-social" width="40" height="40">
+                <use href="#icon-Ellipse-31"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
