--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
           <h2 class="visually-hidden">Our Advent</h2>
           <ul class="list-advent">
             <li class="list-advent-strategy">
-              <svg class="icon" width="64" height="64">
-                <use href="#icon-antenna"></use>
-              </svg>
+              <div class="icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+
               <h3 class="caption">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -77,9 +80,12 @@
               </p>
             </li>
             <li class="list-advent-strategy">
-              <svg class="icon" width="64" height="64">
-                <use href="#icon-clock"></use>
-              </svg>
+              <div class="icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="caption">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -87,19 +93,26 @@
               </p>
             </li>
             <li class="list-advent-strategy">
-              <svg class="icon" width="64" height="64">
-                <use href="#icon-astronaut"></use>
-              </svg>
+              <div class="icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="caption">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
+
             <li class="list-advent-strategy">
-              <svg class="icon" width="64" height="64">
-                <use href="#icon-diagram"></use>
-              </svg>
+              <div class="icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="caption">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -123,9 +136,36 @@
               <div class="name-position">
                 <h3 class="caption-name">Mark Guerrero</h3>
                 <p class="text-position">Product Designer</p>
-                <svg class="icon-social" width="40" height="40">
-                  <use href="#icon-Ellipse1"></use>
-                </svg>
+                <ul class="social">
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -138,9 +178,36 @@
               <div class="name-position">
                 <h3 class="caption-name">Tom Ford</h3>
                 <p class="text-position">Frontend Developer</p>
-                <svg class="icon-social" width="40" height="40">
-                  <use href="#icon-Ellipse-11"></use>
-                </svg>
+                <ul class="social">
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -153,9 +220,36 @@
               <div class="name-position">
                 <h3 class="caption-name">Camila Garcia</h3>
                 <p class="text-position">Marketing</p>
-                <svg class="icon-social" width="40" height="40">
-                  <use href="#icon-Ellipse-21"></use>
-                </svg>
+                <ul class="social">
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="section-card">
@@ -168,9 +262,36 @@
               <div class="name-position">
                 <h3 class="caption-name">Daniel Wilson</h3>
                 <p class="text-position">UI Designer</p>
-                <svg class="icon-social" width="40" height="40">
-                  <use href="#icon-Ellipse-31"></use>
-                </svg>
+                <ul class="social">
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-social">
+                    <a href="" class="icon-social-link">
+                      <svg class="icon-social-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -179,6 +300,7 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="section-title-portfolio">Our Portfolio</h2>
+
           <ul class="list-portfolio">
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
@@ -188,13 +310,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
-
               <div class="name-category">
                 <h3 class="caption-product">Banking App</h3>
                 <p class="text">App</p>
@@ -208,13 +329,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
-
               <div class="name-category">
                 <h3 class="caption-product">Cashless Payment</h3>
                 <p class="text">Marketing</p>
@@ -228,19 +348,17 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
-
               <div class="name-category">
                 <h3 class="caption-product">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
-
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
                 <img
@@ -249,13 +367,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
-
               <div class="name-category">
                 <h3 class="caption-product">Taxi Service</h3>
                 <p class="text">Marketing</p>
@@ -269,13 +386,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
-
               <div class="name-category">
                 <h3 class="caption-product">Screen Illustrations</h3>
                 <p class="text">Design</p>
@@ -289,11 +405,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
 
               <div class="name-category">
@@ -306,36 +422,47 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-studio-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-        <div class="footer-social-text">
-          <h4>Social media</h4>
-          <ul class="footer-social">
-            <li>
-              <svg class="icon-social" width="40" height="40">
-                <use href="#icon-Ellipse1"></use>
-              </svg>
+      <div class="container footer-container">
+        <div class="footer-logo-p">
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-studio-footer">Studio</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div>
+          <p class="footer-social-text">Social media</p>
+          <ul class="social-footer">
+            <li class="icon-social">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Ellipse1"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg class="icon-social" width="40" height="40">
-                <use href="#icon-Ellipse-11"></use>
-              </svg>
+            <li class="icon-social">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Ellipse-11"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg class="icon-social" width="40" height="40">
-                <use href="#icon-Ellipse-21"></use>
-              </svg>
+            <li class="icon-social">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Ellipse-21"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg class="icon-social" width="40" height="40">
-                <use href="#icon-Ellipse-31"></use>
-              </svg>
+            <li class="icon-social">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Ellipse-31"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
