--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           <ul class="social-footer">
             <li class="icon-social">
               <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width=24" height="24">
+                <svg class="icon-social-link-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
