--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             >Web<span class="logo-studio">Studio</span></a
           >
           <ul class="container-nav-menu">
-            <li><a href="./index.html" class="nav">Studio</a></li>
+            <li><a href="./index.html" class="nav nav-studio">Studio</a></li>
             <li><a href="" class="nav">Portfolio</a></li>
             <li><a href="" class="nav">Contacts</a></li>
           </ul>
