--- a/index.html
+++ b/index.html
@@ -462,7 +462,114 @@
             </li>
           </ul>
         </div>
+
+        <div class="email-footer-div">
+          <p class="footer-email-text">Subscribe</p>
+          <form class="footer-form">
+            <label for="email-footer"></label>
+            <input
+              class="input-email-footer"
+              type="email"
+              name="email"
+              id="email-footer"
+              placeholder="E-mail"
+            /><button class="button-email-footer" type="button">
+              <span class="footer-button-text">Subscribe</span>
+              <svg width="24" height="20" class="button-email-footer-svg">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close">
+          <svg class="modal-close-svg" wight="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="modal-name" class="modal-label">Name</label>
+
+            <div class="icon-name-wrap">
+              <input
+                id="modal-name"
+                type="text"
+                name="name"
+                class="modal-input"
+              />
+              <svg class="modal-icon-person" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="modal-phone" class="modal-label">Phone </label>
+
+            <div class="icon-name-wrap">
+              <input
+                id="modal-phone"
+                type="tel"
+                name="phone"
+                class="modal-input"
+              />
+              <svg class="modal-icon-person" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="modal-email" class="modal-label">Email </label>
+
+            <div class="icon-name-wrap">
+              <input
+                id="modal-email"
+                type="email"
+                name="email"
+                class="modal-input"
+              />
+              <svg class="modal-icon-person" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="modal-comment" class="modal-label"> Comment </label
+            ><textarea
+              id="modal-comment"
+              class="modal-textarea"
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="form-checkbox">
+            <input
+              class="modal-check visually-hidden"
+              type="checkbox"
+              name="policy"
+              value="true"
+              id="policy"
+            />
+            <label for="policy" class="form-checkbox-text">
+              <span
+                ><svg width="10" height="8" class="check-icon">
+                  <use href="./images/icons.svg#icon-Vector"></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a class="privacy-link" href="">Privacy Policy</a></label
+            >
+          </div>
+
+          <button type="submit" class="forma-button-send">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
