--- a/index.html
+++ b/index.html
@@ -472,13 +472,14 @@
                 type="email"
                 name="email"
                 id="email-footer"
-                placeholder="E-mail" />
-              <button class="button-email-footer" type="button">
-                <span class="footer-button-text">Subscribe</span>
-                <svg width="24" height="24" class="button-email-footer-svg">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg></button
-            ></label>
+                placeholder="E-mail"
+              /> </label
+            ><button class="button-email-footer" type="button">
+              <span class="footer-button-text">Subscribe</span>
+              <svg width="24" height="24" class="button-email-footer-svg">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
