with correct span

--- a/index.html
+++ b/index.html
@@ -473,12 +473,13 @@
                 name="email"
                 id="email-footer"
                 placeholder="E-mail"
-              /> </label
-            ><button class="button-email-footer" type="button">
-              <span class="footer-button-text">Subscribe</span>
+              />
+              <button class="button-email-footer" type="button"><span class="footer-button-text">Subscribe</span>
               <svg width="24" height="24" class="button-email-footer-svg">
                 <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
+              </svg></button> 
+            </label>
+              
             </button>
           </form>
         </div>
@@ -486,15 +487,15 @@
     </footer>
 
     <div class="backdrop is-open">
-      <div class="modal">
-        <button type="button" class="modal-close-button">
-          <svg class="modal-close-svg" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black"></use>
-          </svg>
-        </button>
+      <div class="modal"><button type="button" class="modal-close-button">
+              <svg class="modal-close-svg" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black"></use>
+              </svg>
+            </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
+            
             <label for="user-name" class="modal-label">Name</label>
 
             <div class="icon-name-wrap">
