--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
               />
             </label>
             <button class="button-email-footer" type="submit">
-              <span class="footer-button-text">Subscribe</span>
+              Subscribe
               <svg width="24" height="24" class="button-email-footer-svg">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
