finished the mob menu

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu ">
+      <div class="mob-menu is-open">
         <div>
           <button type="button" class="menu-close-btn">
             <svg width="8" height="8">
@@ -68,7 +68,7 @@
                 <a href="./index.html" class="mob-nav-studio mob-nav">Studio</a>
               </li>
               <li class=""><a href="" class="mob-nav">Portfolio</a></li>
-              <li class=""><a href=""class="mob-nav">Contacts</a></li>
+              <li class=""><a href="" class="mob-nav">Contacts</a></li>
             </ul>
           </nav>
         </div>
@@ -76,7 +76,7 @@
           <ul class="mob-address">
             <li class="mob-address-li">
               <a
-                class="mob-address-info"
+                class="mob-address-item"
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 >info@devstudio.com</a
@@ -84,38 +84,38 @@
             </li>
             <li class="mob-address-li">
               <a
-                class=s-info"
+                class="mob-address-item"
                 href="tel:+110001111111"
                 target="_blank"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
-          <ul class="social-footer mob-menu-social">
+          <ul class="social mob-menu-social">
             <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
+              <a href="" class="icon-social-link">
+                <svg class="icon-social-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
@@ -614,7 +614,7 @@
       </section>
     </main>
 
-    <footer class="footer ">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-div-logo-and-social">
           <div class="footer-logo-p">
